--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ Flask-Bootstrap
 Flask-Cache
 elasticsearch
 numpy
-matplotlib==1.1.1
+matplotlib
 imposm.parser
 python-memcached
 pillow
+git+git://github.com/werner2101/python-osm.git
